# parse-telegram-export-chat

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: .env.example  parse.py
