[tool.poetry]
name = "src"
version = "0.1.0"
description = "Программа предназначена для извлечения текста из текстовых сообщений, голосовых и видеосообщений."
authors = ["Олейник Серафим <serafim.oleynik.5777@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
speechrecognition = "^3.14.0"
moviepy = "^2.1.2"
pydub = "^0.25.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
